fixed overlapping text on mobile

--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -19,3 +19,12 @@
     font-size: x-large;
     font-family: 'Open Sans', sans-serif;
   }
+  @media only screen and (max-width: 450px) {
+    .header{
+      font-size: 50px;
+    }
+    .header-little{
+      font-size: medium;
+      padding: 5px;
+    }
+  }
